--- a/hello-app/pom.xml
+++ b/hello-app/pom.xml
@@ -24,9 +24,9 @@
             <version>2.0.2.RELEASE</version>
         </dependency>
         <dependency>
-            <groupId>com.example</groupId>
+            <groupId>org.example</groupId>
             <artifactId>hello-starter</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
